--- a/mapping.json
+++ b/mapping.json
@@ -9,7 +9,7 @@
 		"팥가루": [ "팥가루" ],
 		"찹쌀": [ "찹쌀" ],
 		"잡곡밥": [ "잡곡밥" ],
-		"쌀": [ "쌀", "백미", "쌀밥", "보리쌀", "불린쌀", "흑미", "햇반" ],
+		"쌀": [ "쌀", "백미", "쌀밥", "보리쌀", "불린쌀", "흑미", "햇반", "밥" ],
 		"키리모찌": [ "키리모찌" ],
 		"찹쌀떡": [ "찹쌀떡" ],
 		"떡": [ "떡", "조랭이떡", "가래떡", "떡국떡", "떡사리", "떡볶이떡", "밀떡", "조랭이떡" ]
@@ -22,8 +22,8 @@
 		"튀김반죽": [ "튀김반죽" ],
 		"도넛": [ "도넛" ],
 		"또띠아": [ "또띠아", "피타브레드" ],
-		"소면/라면": [ "소면/라면", "일식면" ],
-		"불닭볶음면": [ "불닭볶음면" ],
+		"소면/라면": [ "소면/라면", "일식면", "면" ],
+		"불닭볶음면": [ "불닭볶음면", "붉닭볶음면" ],
 		"돈코츠라멘": [ "돈코츠라멘" ],
 		"짜파게티": [ "짜파게티" ],
 		"치아바타": [ "치아바타" ],
@@ -31,7 +31,7 @@
 		"천사채": [ "천사채" ],
 		"스파게티면": [ "스파게티면", "파스타면", "페투치니", "링귀니" ],
 		"버터식빵": [ "버터식빵", "식빵", "호밀식빵" ],
-		"냉면 면": [ "냉면 면", "생면", "냉면사리" ],
+		"냉면 면": [ "냉면 면", "생면", "냉면사리", "냉면" ],
 		"실곤약": [ "실곤약" ],
 		"국수면": [ "국수면", "잔치국수면", "쌀국수" ],
 		"숏파스타": [ "숏파스타", "푸실리파스타", "푸실리파스타면", "마카로니" ],
@@ -56,7 +56,7 @@
 		"천도복숭아": [ "천도복숭아" ],
 		"아보카도": [ "아보카도" ],
 		"바나나": [ "바나나" ],
-		"말린 과일": [ "말린 과일", "건포도" ],
+		"말린 과일": [ "말린 과일", "건포도", "말린 과일칩" ],
 		"키위": [ "키위", "골드키위" ],
 		"포도": [ "포도", "거봉", "청포도" ],
 		"자몽": [ "자몽" ],
@@ -65,13 +65,13 @@
 		"곶감": [ "곶감" ],
 		"체리": [ "체리" ],
 		"수박": [ "수박" ],
-		"사과": [ "사과", "청사과", "후지사과" ],
+		"사과": [ "사과", "청사과", "후지사과", "과일" ],
 		"레몬": [ "레몬", "레몬 웻지", "레몬껍질" ],
 		"석류": [ "석류" ],
 		"냉동망고": [ "냉동망고" ],
 		"배": [ "배" ],
 		"블루베리": [ "블루베리" ],
-		"라임": [ "라임", "라임즙", "라임 제스트" ],
+		"라임": [ "라임", "라임즙", "라임 제스트", "라임 제스터" ],
 		"귤": [ "귤" ]
 	},
 	"채소류": {
@@ -94,7 +94,7 @@
 			"호박": [ "돼지호박", "호박" ],
 			"옥수수": [ "옥수수" ],
 			"피망": [ "피망", "청피망" ],
-			"파프리카": [ "파프리카" ],
+			"파프리카": [ "파프리카", "레드파프리카" ],
 			"가지": [ "가지" ],
 			"팝콘옥수수": [ "팝콘옥수수" ]
 		},
@@ -114,7 +114,7 @@
 			"열무": [ "열무" ],
 			"쑥갓": [ "쑥갓" ],
 			"쑥": [ "쑥" ],
-			"새싹채소": [ "새싹채소" ],
+			"새싹채소": [ "새싹채소", "채소" ],
 			"무순": [ "무순" ],
 			"아욱": [ "아욱" ],
 			"샐러리": [ "샐러리", "셀러리" ],
@@ -135,7 +135,7 @@
 			"새송이버섯": [ "미니새송이", "미니새송이버섯", "새송이버섯" ],
 			"느타리버섯": [ "느타리버섯", "애느타리버섯" ],
 			"가닥버섯": [ "가닥버섯" ],
-			"양송이버섯/그 외 버섯": [ "버섯", "양송이버섯" ],
+			"양송이버섯/그 외 버섯": [ "버섯", "양송이버섯", "양송이" ],
 			"팽이버섯": [ "팽이버섯" ],
 			"송이버섯": [ "송이버섯" ],
 			"목이버섯": [ "목이버섯" ],
@@ -143,7 +143,7 @@
 		},
 		"배추류": {
 			"배추": [ "배추", "양배추", "배춧잎" ],
-			"알배추": [ "알배기배추", "알배추", "방울양배추" ],
+			"알배추": [ "알배기배추", "알배추", "방울양배추", "알 배추" ],
 			"얼갈이": [ "얼갈이" ],
 			"적채": [ "적채" ],
 			"청경채": [ "청경채" ]
@@ -160,7 +160,7 @@
 		},
 		"열매류": {
 			"산딸기": [ "산딸기" ],
-			"딸기": [ "딸기" ],
+			"딸기": [ "딸기", "데코용 딸기" ],
 			"매실": [ "매실" ],
 			"대추": [ "대추" ],
 			"다래": [ "다래" ],
@@ -170,7 +170,7 @@
 		"고추채소": {
 			"오이고추": [ "오이고추" ],
 			"태국고추/할라피뇨": [ "태국고추", "할라피뇨" ],
-			"고추": [ "고추", "아삭이고추", "홍고추", "풋고추" ],
+			"고추": [ "고추", "아삭이고추", "홍고추", "풋고추", "크러시드레드페퍼" ],
 			"건고추": [ "건고추" ],
 			"말린고추": [ "말린고추" ],
 			"꽈리고추": [ "꽈리고추" ],
@@ -188,7 +188,7 @@
 			"미나리": [ "미나리" ],
 			"건고구마나물": [ "건고구마나물" ],
 			"취나물": [ "취나물" ],
-			"숙주나물": [ "숙주나물" ],
+			"숙주나물": [ "숙주나물", "숙주" ],
 			"우거지": [ "우거지" ],
 			"고사리": [ "고사리" ],
 			"콩나물": [ "콩나물" ]
@@ -203,7 +203,7 @@
 		}
 	},
 	"육류": {
-		"삶는용": { "수육용삼겹살": [ "수육용삼겹살" ], "족발": [ "족발", "미니복발" ] },
+		"삶는용": { "수육용삼겹살": [ "수육용삼겹살" ], "족발": [ "족발", "미니복발", "미니족발" ] },
 		"국거리": { "국거리소고기": [ "국거리소고기" ], "양지머리": [ "양지머리" ] },
 		"구이용": {
 			"꼬치": [ "꼬치" ],
@@ -249,9 +249,9 @@
 	},
 	"계란/유제품류": {
 		"치즈": [ "치즈", "체다치즈", "스트링치즈", "슈레드 치즈", "슈레드 피자치즈", "슬라이스치즈", "슬라이스체다치즈" ],
-		"버터": [ "가염버터", "버터 무염", "버터", "피칸버터", "땅콩버터", "고메버터" ],
+		"버터": [ "가염버터", "버터 무염", "버터", "피칸버터", "땅콩버터", "고메버터", "녹인버터" ],
 		"바나나우유/딸기우유": [ "바나나우유", "딸기우유", "초코우유" ],
-		"계란": [ "계란" ],
+		"계란": [ "계란", "구운란", "계란물", "노른자" ],
 		"초콜릿 치즈": [ "초콜릿 치즈" ],
 		"두유": [ "두유" ],
 		"리코타치즈": [ "리코타치즈", "리코타" ],
@@ -262,11 +262,11 @@
 		"요거트": [ "요거트", "플레인요거트", "딸기요거트" ],
 		"크림치즈": [ "크림치즈" ],
 		"피자치즈/치즈가루": [ "피자치즈", "파마산치즈", "치즈가루", "파마산치즈가루", "그라나파다노치즈" ],
-		"모짜레라치즈": [ "모짜레라치즈" ],
+		"모짜레라치즈": [ "모짜레라치즈", "모짜렐라치즈" ],
 		"강력분": [ "강력분" ],
 		"우유": [ "우유", "지방우유" ],
 		"연유": [ "연유" ],
-		"아이스크림": [ "아이스크림", "돼지바", "바닐라아이스크림", "메로나", "빠삐코바" ],
+		"아이스크림": [ "아이스크림", "돼지바", "바닐라아이스크림", "메로나", "빠삐코바", "투게더" ],
 		"페타치즈": [ "페타치즈" ],
 		"마스카포네치즈": [ "마스카포네치즈" ],
 		"버터크림소스": [ "버터크림소스" ],
@@ -277,10 +277,10 @@
 		"다시마": [ "다시마", "건다시마" ],
 		"게류": [ "꽃게", "대게", "게살", "홍게" ],
 		"메추리알": [ "메추리알" ],
-		"멸치/디포리": [ "멸치", "말린 멸치", "건멸치", "지리멸치", "잔멸치", "디포리" ],
+		"멸치/디포리": [ "멸치", "말린 멸치", "건멸치", "지리멸치", "잔멸치", "디포리", "다포리" ],
 		"국물용멸치": [ "국멸치", "국물용멸치", "육수멸치", "멸치다시마 육수", "멸치육수", "멸치다시팩" ],
 		"황태채": [ "황태채", "황태포" ],
-		"고등어": [ "고등어", "고등어자반" ],
+		"고등어": [ "고등어", "고등어자반", "순살고등어" ],
 		"밴댕이": [ "밴댕이" ],
 		"날치알": [ "날치알" ],
 		"미역": [ "미역" ],
@@ -290,7 +290,7 @@
 		"낙지": [ "낙지" ],
 		"새우": [ "새우", "홍새우", "새우살", "생새우", "칵테일새우", "대하새우", "탈각새우", "손질새우", "중하새우", "블랙타이거새우", "국물용 새우", "건새우" ],
 		"대구": [ "대구" ],
-		"김": [ "김", "파래김", "재래김", "도시락김", "김밥김", "조미김" ],
+		"김": [ "김", "파래김", "재래김", "도시락김", "김밥김", "조미김", "김밥 재료" ],
 		"북어포": [ "북어포" ],
 		"매생이": [ "매생이" ],
 		"연어": [ "연어", "훈제연어", "생연어", "연어캔" ],
@@ -325,7 +325,7 @@
 		"명란젓갈": [ "명란젓갈" ],
 		"시판 불고기양념": [ "시판 불고기양념" ],
 		"돼지갈비양념": [ "돼지갈비양념" ],
-		"겨자/와사비": [ "연겨자", "씨겨자", "와사비", "겨자" ],
+		"겨자/와사비": [ "연겨자", "씨겨자", "와사비", "겨자", "겨자소스" ],
 		"된장": [ "된장", "집된장", "시판된장" ],
 		"생강청": [ "생강청" ],
 		"우스타소스": [ "우스타소스" ],
@@ -340,7 +340,7 @@
 		"물엿": [ "물엿" ],
 		"케첩": [ "케첩", "토마토케첩", "오믈렛 소스" ],
 		"대게딱지장": [ "대게딱지장" ],
-		"깨": [ "깨", "통깨", "검은깨", "참깨", "들깨" ],
+		"깨": [ "깨", "통깨", "검은깨", "참깨", "들깨", "부순참깨" ],
 		"제육볶음양념": [ "제육볶음양념" ],
 		"발사믹소스": [ "발사믹소스" ],
 		"소고기양념": [ "소고기양념" ],
@@ -348,11 +348,11 @@
 		"샤프란": [ "샤프란" ],
 		"춘장": [ "춘장" ],
 		"멸치가루": [ "멸치가루" ],
-		"허니머스터드소스": [ "허니머스터드소스" ],
+		"허니머스터드소스": [ "허니머스터드소스", "머스타드" ],
 		"사워크림": [ "사워크림" ],
 		"쌈장": [ "쌈장" ],
 		"바질": [ "바질", "바질가루" ],
-		"파슬리": [ "파슬리" ],
+		"파슬리": [ "파슬리", "이태리파슬리" ],
 		"사골국물": [ "사골국물" ],
 		"육수류": [ "육수", "다시육수", "사골육수", "다시마물", "냉면육수" ],
 		"냉면양념장": [ "냉면양념장" ],
@@ -463,7 +463,7 @@
 		"비엔나소시지": [ "비엔나소시지", "소시지", "프랑크소시지" ],
 		"동그랑땡": [ "동그랑땡" ],
 		"고추참치": [ "고추참치" ],
-		"햄/스팸": [ "햄", "스팸", "통조림햄" ],
+		"햄/스팸": [ "햄", "스팸", "통조림햄", "슬라이스햄", "샌드위치햄" ],
 		"치킨너겟": [ "치킨너겟" ],
 		"단무지": [ "단무지" ],
 		"드라이 이스트": [ "드라이 이스트" ],
@@ -544,7 +544,7 @@
 		"초코시럽": [ "초코시럽", "누텔라" ],
 		"초콜릿": [ "초콜릿", "다크초콜릿칩", "다크초콜릿", "녹인초코", "크런치초콜릿", "초콜렛 커버춰", "화이트초콜릿", "밀크초콜릿" ],
 		"마시멜로우": [ "마시멜로우" ],
-		"견과류": [ "피스타치오", "땅콩", "피칸", "해바라기씨", "아몬드", "이이스아몬드", "아몬드가루", "아몬드슬" ],
+		"견과류": [ "피스타치오", "땅콩", "피칸", "해바라기씨", "아몬드", "이이스아몬드", "아몬드가루", "아몬드슬", "견과류" ],
 		"잣": [ "잣" ],
 		"호두": [ "호두" ]
 	}
